
 UNDER HEAVY DEVELOPMENT - DO NOT USE FOR PRODUCTION!
    - Under OL2007 some menu entries are missing.

 * More tweaks to allow processing of opaque encrypted or signed
   S/MIME.

 * Shows an error message when trying to decrypt/verify messages not
   signed or encrypted.

 * Soft line breaks in QP encoded messages are now correctly
   processed.


Noteworthy changes for version 0.10.5 (2008-02-18)
==================================================

 * PGP inline encrypted mails are not anymore deleted after the first
   decryption.


Noteworthy changes for version 0.10.4 (2008-02-06)
==================================================

 * Sign and encrypt works now.

 * Texts with embedded attachments are now concatenated.

 * Encrypted message are now viewable in the sent messages folder.


Noteworthy changes for version 0.10.3 (2007-12-10)
==================================================

 * Minor fixes.


Noteworthy changes for version 0.10.2 (2007-11-12)
==================================================

 * New menu items to select the default protocol.

 * Code cleanups.


Noteworthy changes for version 0.10.1 (2007-10-22)
==================================================

 * Auto start the server.

 * Code cleanups. 

 * Made all dialogs language neutral.

 * The manual has some notes about the Registry usage and new MAPI
   properties.


Noteworthy changes for version 0.10.0 (2007-10-11)
==================================================

* Basically a complete rewrite.  A lot of things are still missing but
  if might be useful to see the direction the development takes.


Noteworthy changes for version 0.9.91 (2006-10-13)
==================================================

* Fixed a crash in the recipients dialog.


Noteworthy changes for version 0.9.90 (2006-08-28)
==================================================

* Fix problem that message would be sent in clear
  text if the user cancelled the operation.

* Cosmetic updates for some dialogs.
